test/positive/parentReduce.cfr
claferA
  claferB
    [parent]
    claferC
      [parent.claferC.parent]
      [parent.claferC]