test/negative/nav.cfr
claferA
  claferB
    claferB
      claferC
        claferD
      [claferB]